# cmake-baseg

./: README.md  note.txt
include/: math_func.h  otherThing.h
samples/addsubdirectory/: CMakeLists.txt
samples/addsubdirectory/utilslib/: CMakeLists.txt
samples/addsubdirectory/utilslib/include/: utils.h
samples/addsubdirectory/utilslib/src/: utils.cpp
samples/cache-variable/: CMakeLists.txt
samples/cmakedirpath/: CMakeLists.txt
samples/cmakedirpath/mysub/: CMakeLists.txt
samples/mathincmake/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  math_func.cpp  otherThing.cpp
